@@ -1,7 +1,7 @@
 function export.GetGlobalInfo()
   return {
     Version       = { 1, 0, 0, 565 },
-    MinFarVersion = { 3, 0, 0, 4577 },
+    MinFarVersion = { 3, 0, 0, 4578 },
     Guid          = win.Uuid("4EBBEFC8-2084-4B7F-94C0-692CE136894D"),
     Title         = "LuaMacro",
     Description   = "Far macros in Lua",
