@@ -2260,11 +2260,8 @@ intptr_t KeyMacro::CallFar(intptr_t CheckCode, FarMacroCall* Data)
 				if (panel)
 				{
 					int SortMode = (int)Data->Values[1].Double;
-					if (panel->CanDoCustomSort(SortMode))
-					{
-						bool InvertByDefault = Data->Values[2].Boolean != 0;
-						panel->SetCustomSortMode(SortMode, false, InvertByDefault);
-					}
+					bool InvertByDefault = Data->Values[2].Boolean != 0;
+					panel->SetCustomSortMode(SortMode, false, InvertByDefault);
 				}
 			}
 			break;
