@@ -1,4 +1,8 @@
-﻿shmuel 13.03.2016 01:35:20 +0200 - build 4577
+﻿shmuel 13.03.2016 21:45:25 +0200 - build 4578
+
+1. Уточнение 4577.
+
+shmuel 13.03.2016 01:35:20 +0200 - build 4577
 
 1. В функции Panel.LoadCustomSortMode таблица параметров может включать в себя опциональное поле
    'Condition' (функцию). Данная функция может использоваться, например, в интерактивном режиме
